--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,7 @@
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
+    "types/*.d.ts",
     "types/**/*.d.ts",
     "types/**/*.ts",
     "build/**/*.ts",
